# MTRN4231

./: MTRN4231.code-workspace  README.md
4231_demo_packages/src/demo_client_service/: CMakeLists.txt  package.xml
4231_demo_packages/src/demo_client_service/src/: int_addition_server.cpp
4231_demo_packages/src/demo_interactive_marker/: CMakeLists.txt  README.md  package.xml
4231_demo_packages/src/demo_launch_param/: README.md  package.xml  setup.cfg  setup.py
4231_demo_packages/src/demo_launch_param/demo_launch_param/: marker_node.py
4231_demo_packages/src/demo_launch_param/launch/: marker_launch.py  rviz_launch.py
4231_demo_packages/src/demo_moveit_ur/: CMakeLists.txt  README.md  package.xml
4231_demo_packages/src/demo_moveit_ur/include/: moveit_servo_ur.hpp
4231_demo_packages/src/demo_moveit_ur/launch/: moveit_avoid_launch.py  moveit_basic_launch.py  moveit_constrain_launch.py  moveit_servo_launch.py
4231_demo_packages/src/demo_moveit_ur/src/: moveit_avoid_ur.cpp  moveit_basic_ur.cpp  moveit_constrain_ur.cpp  moveit_servo_ur.cpp
4231_demo_packages/src/demo_tf2/: CMakeLists.txt  README.md  package.xml
4231_demo_packages/src/demo_tf2/include/: dynamicExample.hpp  listenerExample.hpp
4231_demo_packages/src/demo_tf2/src/: dynamicExample.cpp  listenerExample.cpp  staticExample.cpp
4231_utils/src/util_arduino_serial/util_arduino_serial/: util_arduino_serial.py
4231_utils/src/util_keyboard/: README.md  package.xml  setup.cfg  setup.py
4231_utils/src/util_keyboard/util_keyboard/: util_keyboard.py
lab1_workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lab1_workspace/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
lab1_workspace/install/cpp_pubsub/share/ament_index/resource_index/parent_prefix_path/: cpp_pubsub
lab1_workspace/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh  package.xml
lab1_workspace/install/tutorial_interfaces/include/tutorial_interfaces/tutorial_interfaces/msg/: pose_stamped.h  pose_stamped.hpp
lab1_workspace/install/tutorial_interfaces/share/tutorial_interfaces/: local_setup.sh  package.sh
lab1_workspace/install/tutorial_interfaces/share/tutorial_interfaces/msg/: Posestamped.idl
lab1_workspace/log/: latest_build
lab1_workspace/src/cpp_pubsub/: CMakeLists.txt
lab1_workspace/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
lab1_workspace/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lab1_workspace/src/log/: latest_build
lab1_workspace/src/tutorial_interfaces/: CMakeLists.txt
lab1_workspace/src/tutorial_interfaces/msg/: Posestamped.msg
lab2_workspace/: transform_dynamic_stub.cpp  transform_listener_stub.cpp  transform_static_stub.cpp
lab2_workspace/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lab2_workspace/src/install/Transformations/share/Transformations/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
lab2_workspace/src/install/interface/share/interface/: package.sh  package.xml
lab2_workspace/src/install/lab2_client_service/lib/lab2_client_service/: int_addition_client  int_addition_server  lookup_server
lab2_workspace/src/install/lab2_client_service/share/lab2_client_service/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
lab2_workspace/src/install/my_interface/share/my_interface/: package.sh
lab2_workspace/src/install/transformations/lib/transformations/: dynamic_broadcaster  static_broadcaster  tf_listener
lab2_workspace/src/install/transformations/share/transformations/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
lab2_workspace/src/install/visualisation/lib/visualisation/: OOI
lab2_workspace/src/install/visualisation/share/visualisation/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
lab2_workspace/src/lab2_client_service/: CMakeLists.txt  README.md
lab2_workspace/src/lab2_client_service/src/: int_addition_client.cpp  lookup_server.cpp
lab2_workspace/src/log/: latest_build
lab2_workspace/src/my_interface/: CMakeLists.txt
lab2_workspace/src/transformations/: CMakeLists.txt  frames_2025-09-19_22.53.44.gv  package.xml
lab2_workspace/src/transformations/src/: dynamic_transformation.cpp  listener_transformation.cpp  static_camera_transformation.cpp
lab2_workspace/src/transformations/src/install/: local_setup.sh  setup.sh  setup.zsh
lab2_workspace/src/transformations/src/log/: latest_build
lab2_workspace/src/visualisation/: CMakeLists.txt  package.xml
lab2_workspace/src/visualisation/src/: OOI.cpp
lab2_workspace/src/visualisation/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
lab2_workspace/src/visualisation/src/log/: latest_build
lab3_workspace/src/object_detect/object_detect/: object_detect.py
lab5_workspace/src/claw/claw_description/: CMakeLists.txt  package.xml
lab5_workspace/src/claw/claw_description/launch/: display.launch.py
lab5_workspace/src/claw/claw_description/meshes/: claw1.STL  claw2.STL  claw3.STL
lab5_workspace/src/claw/claw_description/rviz/: claw.rviz
lab5_workspace/src/claw/claw_description/urdf/: claw.urdf.xacro  claw.xacro
lab5_workspace/src/pizza_cutter/pizza_cutter_description/: CMakeLists.txt  package.xml
lab5_workspace/src/pizza_cutter/pizza_cutter_description/launch/: display.launch.py
lab5_workspace/src/pizza_cutter/pizza_cutter_description/rviz/: display.rviz
lab5_workspace/src/pizza_cutter/pizza_cutter_description/urdf/: pizza_cutter.urdf
lab5_workspace/src/ur_with_pizza_cutter/ur_with_pizza_cutter_description/: CMakeLists.txt  package.xml
lab5_workspace/src/ur_with_pizza_cutter/ur_with_pizza_cutter_description/launch/: display.launch.py
lab5_workspace/src/ur_with_pizza_cutter/ur_with_pizza_cutter_description/rviz/: display.rviz
lab5_workspace/src/ur_with_pizza_cutter/ur_with_pizza_cutter_description/urdf/: ur_with_pizza_cutter.xacro
(+46 files in other folders)
