<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo_launch_param</name>
  <version>0.0.0</version>
  <description>Demonstation of launch files and parameters</description>
  <maintainer email="mitch.torok@gmail.com">Mitchell</maintainer>
  <license>Apache License 2.0</license>


  <build_depend>ament_cmake_python</build_depend>
  <exec_depend>ament_cmake_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
